fix :: overflowing artist and song text

--- a/src/styles/NowPlaying.css
+++ b/src/styles/NowPlaying.css
@@ -35,6 +35,7 @@
   .right--top {
     display: flex;
     flex-direction: column;
+    gap: 2px;
   }
 
   .right--bottom {
